Updated through week 4

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
           "picks": {
             "w00": null,
             "w01": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Hawaii"},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Webber St."},
-            "w03": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Kansas St."},
+            "w02": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Webber St."},
+            "w03": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Kansas St."},
             "w04": null,
             "w05": {"pick": null,  "nc": false, "pre": "at",       "team": "Iowa St."},
             "w06": {"pick": null,  "nc": false, "pre": "vs",       "team": "OSU"},
@@ -141,9 +141,9 @@
           "picks": {
             "w00": null,
             "w01": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "N. Arizona"},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC at",    "team": "Mississippi St."},
-            "w03": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Texas St."},
-            "w04": {"pick": null,  "nc": false, "pre": "at",       "team": "Baylor"},
+            "w02": {"pick": false, "nc": true,  "pre": "NC at",    "team": "Mississippi St."},
+            "w03": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Texas St."},
+            "w04": {"pick": true,  "nc": false, "pre": "at",       "team": "Baylor"},
             "w05": {"pick": null,  "nc": false, "pre": "vs",       "team": "TCU"},
             "w06": null,
             "w07": {"pick": null,  "nc": false, "pre": "at",       "team": "Utah"},
@@ -163,9 +163,9 @@
           "picks": {
             "w00": null,
             "w01": {"pick": false, "nc": true,  "pre": "NC vs",    "team": "Auburn"},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC at",    "team": "SMU"},
-            "w03": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Samford"},
-            "w04": {"pick": null,  "nc": false, "pre": "vs",       "team": "Arizona St."},
+            "w02": {"pick": true,  "nc": true,  "pre": "NC at",    "team": "SMU"},
+            "w03": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Samford"},
+            "w04": {"pick": false, "nc": false, "pre": "vs",       "team": "Arizona St."},
             "w05": {"pick": null,  "nc": false, "pre": "at",       "team": "Oklahoma St."},
             "w06": {"pick": null,  "nc": false, "pre": "vs",       "team": "Kansas St."},
             "w07": null,
@@ -185,9 +185,9 @@
           "picks": {
             "w00": null,
             "w01": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Portland St."},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Stanford"},
+            "w02": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Stanford"},
             "w03": null,
-            "w04": {"pick": null,  "nc": true,  "pre": "NC at",    "team": "E. Carolina"},
+            "w04": {"pick": true,  "nc": true,  "pre": "NC at",    "team": "E. Carolina"},
             "w05": {"pick": null,  "nc": false, "pre": "at",       "team": "Colorado"},
             "w06": {"pick": null,  "nc": false, "pre": "vs",       "team": "West Virginia"},
             "w07": {"pick": null,  "nc": false, "pre": "at",       "team": "Arizona"},
@@ -207,9 +207,9 @@
           "picks": {
             "w00": null,
             "w01": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Jacksonville St."},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "N. Carolina A&T"},
+            "w02": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "N. Carolina A&T"},
             "w03": null,
-            "w04": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "UNC"},
+            "w04": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "UNC"},
             "w05": {"pick": null,  "nc": false, "pre": "at",       "team": "Kansas St."},
             "w06": {"pick": null,  "nc": false, "pre": "vs",       "team": "Kansas"},
             "w07": {"pick": null,  "nc": false, "pre": "at",       "team": "Cincinnati"},
@@ -229,8 +229,8 @@
           "picks": {
             "w00": null,
             "w01": {"pick": false, "nc": true,  "pre": "NC at*",   "team": "Nebraska"},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Bowling Green"},
-            "w03": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Northwestern St."},
+            "w02": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Bowling Green"},
+            "w03": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Northwestern St."},
             "w04": null,
             "w05": {"pick": null,  "nc": false, "pre": "at",       "team": "Kansas"},
             "w06": {"pick": null,  "nc": false, "pre": "vs",       "team": "Iowa St."},
@@ -251,9 +251,9 @@
           "picks": {
             "w00": null,
             "w01": {"pick": false, "nc": true,  "pre": "NC vs",    "team": "Georgia Tech"},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Delaware"},
-            "w03": {"pick": null,  "nc": false, "pre": "at",       "team": "Houston"},
-            "w04": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Wyoming"},
+            "w02": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Delaware"},
+            "w03": {"pick": false, "nc": false, "pre": "at",       "team": "Houston"},
+            "w04": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Wyoming"},
             "w05": {"pick": null,  "nc": false, "pre": "vs",       "team": "BYU"},
             "w06": {"pick": null,  "nc": false, "pre": "at",       "team": "TCU"},
             "w07": {"pick": null,  "nc": false, "pre": "vs",       "team": "Iowa St."},
@@ -273,8 +273,8 @@
           "picks": {
             "w00": null,
             "w01": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Stephen F. Austin"},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC at",    "team": "Rice"},
-            "w03": {"pick": null,  "nc": false, "pre": "vs",       "team": "Colorado"},
+            "w02": {"pick": true,  "nc": true,  "pre": "NC at",    "team": "Rice"},
+            "w03": {"pick": true,  "nc": false, "pre": "vs",       "team": "Colorado"},
             "w04": null,
             "w05": {"pick": null,  "nc": true,  "pre": "NC at",    "team": "Oregon St."},
             "w06": {"pick": null,  "nc": false, "pre": "vs",       "team": "Texas Tech"},
@@ -295,8 +295,8 @@
           "picks": {
             "w00": {"pick": true,  "nc": false, "pre": "🍀 at*",   "team": "Kansas St."},
             "w01": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "S. Dakota"},
-            "w02": {"pick": null,  "nc": true,  "pre": "🌽 NC vs", "team": "Iowa"},
-            "w03": {"pick": null,  "nc": true,  "pre": "NC at",    "team": "Arkansas St."},
+            "w02": {"pick": true,  "nc": true,  "pre": "🌽 NC vs", "team": "Iowa"},
+            "w03": {"pick": true,  "nc": true,  "pre": "NC at",    "team": "Arkansas St."},
             "w04": null,
             "w05": {"pick": null,  "nc": false, "pre": "vs",       "team": "Arizona"},
             "w06": {"pick": null,  "nc": false, "pre": "at",       "team": "Cincinnati"},
@@ -317,9 +317,9 @@
           "picks": {
             "w00": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Fresno St."},
             "w01": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Wagner"},
-            "w02": {"pick": null,  "nc": true,  "pre": "🪖 NC at", "team": "Missouri"},
+            "w02": {"pick": false, "nc": true,  "pre": "🪖 NC at", "team": "Missouri"},
             "w03": null,
-            "w04": {"pick": null,  "nc": false, "pre": "vs",       "team": "West Virginia"},
+            "w04": {"pick": true,  "nc": false, "pre": "vs",       "team": "West Virginia"},
             "w05": {"pick": null,  "nc": false, "pre": "vs",       "team": "Cincinnati"},
             "w06": {"pick": null,  "nc": false, "pre": "at",       "team": "UCF"},
             "w07": {"pick": null,  "nc": false, "pre": "at",       "team": "Texas Tech"},
@@ -339,8 +339,8 @@
           "picks": {
             "w00": {"pick": false, "nc": false, "pre": "🍀 vs*",   "team": "Iowa St."},
             "w01": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "N. Dakota"},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Army"},
-            "w03": {"pick": null,  "nc": true,  "pre": "NC at",    "team": "Arizona"},
+            "w02": {"pick": false, "nc": true,  "pre": "NC vs",    "team": "Army"},
+            "w03": {"pick": false, "nc": true,  "pre": "NC at",    "team": "Arizona"},
             "w04": null,
             "w05": {"pick": null,  "nc": false, "pre": "vs",       "team": "UCF"},
             "w06": {"pick": null,  "nc": false, "pre": "at",       "team": "Baylor"},
@@ -361,9 +361,9 @@
           "picks": {
             "w00": null,
             "w01": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "UT-Martin"},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC at",    "team": "Oregon"},
+            "w02": {"pick": false, "nc": true,  "pre": "NC at",    "team": "Oregon"},
             "w03": null,
-            "w04": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Tulsa"},
+            "w04": {"pick": false, "nc": true,  "pre": "NC vs",    "team": "Tulsa"},
             "w05": {"pick": null,  "nc": false, "pre": "vs",       "team": "Baylor"},
             "w06": {"pick": null,  "nc": false, "pre": "at",       "team": "Arizona"},
             "w07": {"pick": null,  "nc": false, "pre": "vs",       "team": "Houston"},
@@ -384,8 +384,8 @@
             "w00": null,
             "w01": {"pick": true,  "nc": true,  "pre": "NC at",    "team": "UNC"},
             "w02": null,
-            "w03": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Abilene Christian"},
-            "w04": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "SMU"},
+            "w03": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Abilene Christian"},
+            "w04": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "SMU"},
             "w05": {"pick": null,  "nc": false, "pre": "at",       "team": "Arizona St."},
             "w06": {"pick": null,  "nc": false, "pre": "vs",       "team": "Colorado"},
             "w07": {"pick": null,  "nc": false, "pre": "at",       "team": "Kansas St."},
@@ -405,9 +405,9 @@
           "picks": {
             "w00": null,
             "w01": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Arkansas P-B"},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Kent St."},
-            "w03": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Oregon St."},
-            "w04": {"pick": null,  "nc": false, "pre": "at",       "team": "Utah"},
+            "w02": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Kent St."},
+            "w03": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Oregon St."},
+            "w04": {"pick": true,  "nc": false, "pre": "at",       "team": "Utah"},
             "w05": null,
             "w06": {"pick": null,  "nc": false, "pre": "at",       "team": "Houston"},
             "w07": {"pick": null,  "nc": false, "pre": "vs",       "team": "Kansas"},
@@ -427,9 +427,9 @@
           "picks": {
             "w00": null,
             "w01": {"pick": true,  "nc": true,  "pre": "NC at",    "team": "UCLA"},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC vs",    "team": "Cal Poly"},
-            "w03": {"pick": null,  "nc": true,  "pre": "NC at",    "team": "Wyoming"},
-            "w04": {"pick": null,  "nc": false, "pre": "vs",       "team": "Texas Tech"},
+            "w02": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Cal Poly"},
+            "w03": {"pick": true,  "nc": true,  "pre": "NC at",    "team": "Wyoming"},
+            "w04": {"pick": false, "nc": false, "pre": "vs",       "team": "Texas Tech"},
             "w05": {"pick": null,  "nc": false, "pre": "at",       "team": "West Virginia"},
             "w06": null,
             "w07": {"pick": null,  "nc": false, "pre": "vs",       "team": "Arizona St."},
@@ -449,9 +449,9 @@
           "picks": {
             "w00": null,
             "w01": {"pick": true,  "nc": true,  "pre": "NC vs",    "team": "Robert Morris"},
-            "w02": {"pick": null,  "nc": true,  "pre": "NC at",    "team": "Ohio"},
-            "w03": {"pick": null,  "nc": true,  "pre": "💩 NC vs", "team": "Pitt"},
-            "w04": {"pick": null,  "nc": false, "pre": "at",       "team": "Kansas"},
+            "w02": {"pick": false, "nc": true,  "pre": "NC at",    "team": "Ohio"},
+            "w03": {"pick": true,  "nc": true,  "pre": "💩 NC vs", "team": "Pitt"},
+            "w04": {"pick": false, "nc": false, "pre": "at",       "team": "Kansas"},
             "w05": {"pick": null,  "nc": false, "pre": "vs",       "team": "Utah"},
             "w06": {"pick": null,  "nc": false, "pre": "at",       "team": "BYU"},
             "w07": null,
